refactor: Replace custom bolt stack with shared bolt connection module. (#832)
This change swaps out the copy of the Java drivers bolt stack in favour of the new bolt connection module which serves from now on as our shared network layer between the common Java driver for Neo4j and the Neo4j JDBC driver.

---------

Co-authored-by: Michael Simons <michael.simons@neo4j.com>