@@ -21,10 +21,8 @@ package org.neo4j.jdbc;
 import java.sql.SQLException;
 import java.sql.SQLTimeoutException;
 import java.util.Collections;
-import java.util.Map;
-import java.util.Set;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.CompletionStage;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.Test;
@@ -33,23 +31,24 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.EnumSource;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.junit.jupiter.params.provider.ValueSource;
-import org.mockito.Mockito;
-import org.neo4j.jdbc.internal.bolt.AccessMode;
-import org.neo4j.jdbc.internal.bolt.BoltConnection;
-import org.neo4j.jdbc.internal.bolt.TransactionType;
-import org.neo4j.jdbc.internal.bolt.exception.BoltException;
-import org.neo4j.jdbc.internal.bolt.exception.Neo4jException;
-import org.neo4j.jdbc.internal.bolt.response.DiscardResponse;
-import org.neo4j.jdbc.internal.bolt.response.PullResponse;
-import org.neo4j.jdbc.internal.bolt.response.RunResponse;
+import org.mockito.stubbing.Answer;
+import org.neo4j.bolt.connection.AccessMode;
+import org.neo4j.bolt.connection.BoltConnection;
+import org.neo4j.bolt.connection.DatabaseNameUtil;
+import org.neo4j.bolt.connection.ResponseHandler;
+import org.neo4j.bolt.connection.TransactionType;
+import org.neo4j.bolt.connection.exception.BoltException;
+import org.neo4j.bolt.connection.summary.CommitSummary;
+import org.neo4j.bolt.connection.summary.DiscardSummary;
+import org.neo4j.bolt.connection.summary.PullSummary;
+import org.neo4j.bolt.connection.summary.RollbackSummary;
+import org.neo4j.bolt.connection.summary.RunSummary;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.ArgumentMatchers.anyMap;
-import static org.mockito.ArgumentMatchers.anySet;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.then;
 import static org.mockito.Mockito.mock;
@@ -66,45 +65,56 @@ class DefaultTransactionImplTests {
 	@ValueSource(booleans = { true, false })
 	void shouldHaveExpectedDefaults(boolean autoCommit) {
 		var boltConnection = mock(BoltConnection.class);
-		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER,
-				new CompletableFuture<>(), autoCommit, null, null);
+		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER, false, autoCommit,
+				AccessMode.WRITE, null, "aBeautifulDatabase");
 
 		assertThat(this.transaction.getState()).isEqualTo(Neo4jTransaction.State.NEW);
 		assertThat(this.transaction.isRunnable()).isEqualTo(true);
 		assertThat(this.transaction.isOpen()).isEqualTo(true);
 		assertThat(this.transaction.isAutoCommit()).isEqualTo(autoCommit);
+
+		var transactionType = autoCommit ? TransactionType.UNCONSTRAINED : TransactionType.DEFAULT;
+		var transactionMode = autoCommit ? "IMPLICIT" : null;
+
 		then(boltConnection).should()
-			.beginTransaction(Set.of(), Map.of(), AccessMode.WRITE,
-					autoCommit ? TransactionType.UNCONSTRAINED : TransactionType.DEFAULT, false);
+			.beginTransaction(eq(DatabaseNameUtil.database("aBeautifulDatabase")), eq(AccessMode.WRITE), any(),
+					eq(Collections.emptySet()), eq(transactionType), any(), any(), eq(transactionMode), any());
 		then(boltConnection).shouldHaveNoMoreInteractions();
 	}
 
 	@Test
 	void shouldRunAndPull() throws SQLException {
 		var boltConnection = mockBoltConnection();
-		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER,
-				CompletableFuture.completedStage(null), true, null, null);
+		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER, false, true,
+				AccessMode.WRITE, null, "aBeautifulDatabase");
 		var query = "query";
-		var parameters = Collections.<String, Object>emptyMap();
 		var fetchSize = 5;
-		var runResponse = mock(RunResponse.class);
-		var runFuture = CompletableFuture.completedFuture(runResponse);
-		given(boltConnection.run(query, parameters, false)).willReturn(runFuture);
-		var pullResponse = mock(PullResponse.class);
-		given(boltConnection.pull(runFuture, fetchSize)).willReturn(CompletableFuture.completedFuture(pullResponse));
+		var connectionFuture = CompletableFuture.completedFuture(boltConnection);
 
-		var response = this.transaction.runAndPull(query, parameters, fetchSize, 5);
+		given(boltConnection.run(query, Collections.emptyMap())).willReturn(connectionFuture);
+		given(boltConnection.pull(-1, fetchSize)).willReturn(connectionFuture);
+		given(boltConnection.flush(any())).willAnswer((Answer<CompletableFuture<Void>>) invocation -> {
+			invocation.<ResponseHandler>getArgument(0).onRunSummary(mock(RunSummary.class));
+			invocation.<ResponseHandler>getArgument(0).onPullSummary(mock(PullSummary.class));
+			invocation.<ResponseHandler>getArgument(0).onComplete();
+			return CompletableFuture.completedFuture(null);
+		});
+
+		var response = this.transaction.runAndPull(query, Collections.emptyMap(), fetchSize, 5);
 
 		assertThat(response).isNotNull();
-		assertThat(response.runResponse()).isEqualTo(runResponse);
-		assertThat(response.pullResponse()).isEqualTo(pullResponse);
+		assertThat(response.runResponse().queryId()).isZero();
+		assertThat(response.runResponse().keys()).isEmpty();
+		assertThat(response.pullResponse()).isNotNull();
 		assertThat(this.transaction.getState()).isEqualTo(Neo4jTransaction.State.READY);
 		assertThat(this.transaction.isRunnable()).isEqualTo(true);
 		assertThat(this.transaction.isOpen()).isEqualTo(true);
 		then(boltConnection).should()
-			.beginTransaction(Set.of(), Map.of(), AccessMode.WRITE, TransactionType.UNCONSTRAINED, false);
-		then(boltConnection).should().run(query, parameters, false);
-		then(boltConnection).should().pull(runFuture, fetchSize);
+			.beginTransaction(eq(DatabaseNameUtil.database("aBeautifulDatabase")), eq(AccessMode.WRITE), any(),
+					eq(Collections.emptySet()), eq(TransactionType.UNCONSTRAINED), any(), any(), eq("IMPLICIT"), any());
+		then(boltConnection).should().run(eq("query"), any());
+		then(boltConnection).should().pull(anyLong(), anyLong());
+		then(boltConnection).should().flush(any());
 		then(boltConnection).shouldHaveNoMoreInteractions();
 	}
 
@@ -112,65 +122,84 @@ class DefaultTransactionImplTests {
 	@ValueSource(booleans = { true, false })
 	void shouldRunAndDiscard(boolean commit) throws SQLException {
 		var boltConnection = mockBoltConnection();
-		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER,
-				CompletableFuture.completedStage(null), true, null, null);
+		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER, false, true,
+				AccessMode.WRITE, null, "aBeautifulDatabase");
 		var query = "query";
-		var parameters = Collections.<String, Object>emptyMap();
 		var fetchSize = 5;
-		var runResponse = mock(RunResponse.class);
-		var runFuture = CompletableFuture.completedFuture(runResponse);
-		given(boltConnection.run(query, parameters, false)).willReturn(runFuture);
-		var discardResponse = mock(DiscardResponse.class);
-		given(boltConnection.discard(-1, !commit)).willReturn(CompletableFuture.completedFuture(discardResponse));
+		var connectionFuture = CompletableFuture.completedFuture(boltConnection);
+
+		given(boltConnection.run(query, Collections.emptyMap())).willReturn(connectionFuture);
+		given(boltConnection.discard(eq(-1L), anyLong())).willReturn(connectionFuture);
+		given(boltConnection.flush(any())).willAnswer((Answer<CompletableFuture<Void>>) invocation -> {
+			invocation.<ResponseHandler>getArgument(0).onRunSummary(mock(RunSummary.class));
+			invocation.<ResponseHandler>getArgument(0).onDiscardSummary(mock(DiscardSummary.class));
+			invocation.<ResponseHandler>getArgument(0).onComplete();
+			return CompletableFuture.completedFuture(null);
+		});
 		if (commit) {
-			given(boltConnection.commit()).willReturn(CompletableFuture.completedFuture(null));
+			given(boltConnection.commit()).willReturn(connectionFuture);
 		}
 
-		var response = this.transaction.runAndDiscard(query, parameters, fetchSize, commit);
+		var response = this.transaction.runAndDiscard(query, Collections.emptyMap(), fetchSize, commit);
 
 		assertThat(response).isNotNull();
-		assertThat(response).isEqualTo(discardResponse);
 		assertThat(this.transaction.getState())
 			.isEqualTo(commit ? Neo4jTransaction.State.COMMITTED : Neo4jTransaction.State.READY);
 		assertThat(this.transaction.isRunnable()).isEqualTo(!commit);
 		assertThat(this.transaction.isOpen()).isEqualTo(!commit);
 		then(boltConnection).should()
-			.beginTransaction(Set.of(), Map.of(), AccessMode.WRITE, TransactionType.UNCONSTRAINED, false);
-		then(boltConnection).should().run(query, parameters, false);
-		then(boltConnection).should().discard(-1, !commit);
+			.beginTransaction(eq(DatabaseNameUtil.database("aBeautifulDatabase")), eq(AccessMode.WRITE), any(),
+					eq(Collections.emptySet()), eq(TransactionType.UNCONSTRAINED), any(), any(), eq("IMPLICIT"), any());
+		then(boltConnection).should().run(eq("query"), any());
+		then(boltConnection).should().discard(eq(-1L), anyLong());
 		then(boltConnection).should(times(commit ? 1 : 0)).commit();
+		then(boltConnection).should().flush(any());
 		then(boltConnection).shouldHaveNoMoreInteractions();
 	}
 
 	@Test
 	void shouldPull() throws SQLException {
 		var boltConnection = mockBoltConnection();
-		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER,
-				CompletableFuture.completedStage(null), true, null, Neo4jTransaction.State.READY);
+		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER, false, true,
+				AccessMode.WRITE, Neo4jTransaction.State.READY, "aBeautifulDatabase");
 		var fetchSize = 5;
-		var runResponse = mock(RunResponse.class);
-		var pullResponse = mock(PullResponse.class);
-		given(boltConnection.pull(runResponse, fetchSize)).willReturn(CompletableFuture.completedFuture(pullResponse));
+		var connectionFuture = CompletableFuture.completedFuture(boltConnection);
+		var runResponse = mock(Neo4jTransaction.RunResponse.class);
+		given(runResponse.queryId()).willReturn(-1L);
+
+		given(boltConnection.pull(-1, fetchSize)).willReturn(connectionFuture);
+		given(boltConnection.flush(any())).willAnswer((Answer<CompletableFuture<Void>>) invocation -> {
+			invocation.<ResponseHandler>getArgument(0).onPullSummary(mock(PullSummary.class));
+			invocation.<ResponseHandler>getArgument(0).onComplete();
+			return CompletableFuture.completedFuture(null);
+		});
 
 		var response = this.transaction.pull(runResponse, fetchSize);
 
 		assertThat(response).isNotNull();
-		assertThat(response).isEqualTo(pullResponse);
 		assertThat(this.transaction.getState()).isEqualTo(Neo4jTransaction.State.READY);
 		assertThat(this.transaction.isRunnable()).isEqualTo(true);
 		assertThat(this.transaction.isOpen()).isEqualTo(true);
 		then(boltConnection).should()
-			.beginTransaction(Set.of(), Map.of(), AccessMode.WRITE, TransactionType.UNCONSTRAINED, false);
-		then(boltConnection).should().pull(runResponse, fetchSize);
+			.beginTransaction(eq(DatabaseNameUtil.database("aBeautifulDatabase")), eq(AccessMode.WRITE), any(),
+					eq(Collections.emptySet()), eq(TransactionType.UNCONSTRAINED), any(), any(), eq("IMPLICIT"), any());
+		then(boltConnection).should().pull(anyLong(), anyLong());
+		then(boltConnection).should().flush(any());
 		then(boltConnection).shouldHaveNoMoreInteractions();
 	}
 
 	@Test
 	void shouldCommit() throws SQLException {
 		var boltConnection = mockBoltConnection();
-		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER,
-				CompletableFuture.completedStage(null), true, null, Neo4jTransaction.State.READY);
-		given(boltConnection.commit()).willReturn(CompletableFuture.completedFuture(null));
+		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER, false, true,
+				AccessMode.WRITE, Neo4jTransaction.State.READY, "aBeautifulDatabase");
+		var connectionFuture = CompletableFuture.completedFuture(boltConnection);
+		given(boltConnection.commit()).willReturn(connectionFuture);
+		given(boltConnection.flush(any())).willAnswer((Answer<CompletableFuture<Void>>) invocation -> {
+			invocation.<ResponseHandler>getArgument(0).onCommitSummary(mock(CommitSummary.class));
+			invocation.<ResponseHandler>getArgument(0).onComplete();
+			return CompletableFuture.completedFuture(null);
+		});
 
 		this.transaction.commit();
 
@@ -178,17 +207,25 @@ class DefaultTransactionImplTests {
 		assertThat(this.transaction.isRunnable()).isEqualTo(false);
 		assertThat(this.transaction.isOpen()).isEqualTo(false);
 		then(boltConnection).should()
-			.beginTransaction(Set.of(), Map.of(), AccessMode.WRITE, TransactionType.UNCONSTRAINED, false);
+			.beginTransaction(eq(DatabaseNameUtil.database("aBeautifulDatabase")), eq(AccessMode.WRITE), any(),
+					eq(Collections.emptySet()), eq(TransactionType.UNCONSTRAINED), any(), any(), eq("IMPLICIT"), any());
 		then(boltConnection).should().commit();
+		then(boltConnection).should().flush(any());
 		then(boltConnection).shouldHaveNoMoreInteractions();
 	}
 
 	@Test
 	void shouldRollback() throws SQLException {
 		var boltConnection = mockBoltConnection();
-		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER,
-				CompletableFuture.completedStage(null), true, null, Neo4jTransaction.State.READY);
-		given(boltConnection.rollback()).willReturn(CompletableFuture.completedFuture(null));
+		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER, false, true,
+				AccessMode.WRITE, Neo4jTransaction.State.READY, "aBeautifulDatabase");
+		var connectionFuture = CompletableFuture.completedFuture(boltConnection);
+		given(boltConnection.rollback()).willReturn(connectionFuture);
+		given(boltConnection.flush(any())).willAnswer((Answer<CompletableFuture<Void>>) invocation -> {
+			invocation.<ResponseHandler>getArgument(0).onRollbackSummary(mock(RollbackSummary.class));
+			invocation.<ResponseHandler>getArgument(0).onComplete();
+			return CompletableFuture.completedFuture(null);
+		});
 
 		this.transaction.rollback();
 
@@ -196,16 +233,18 @@ class DefaultTransactionImplTests {
 		assertThat(this.transaction.isRunnable()).isEqualTo(false);
 		assertThat(this.transaction.isOpen()).isEqualTo(false);
 		then(boltConnection).should()
-			.beginTransaction(Set.of(), Map.of(), AccessMode.WRITE, TransactionType.UNCONSTRAINED, false);
+			.beginTransaction(eq(DatabaseNameUtil.database("aBeautifulDatabase")), eq(AccessMode.WRITE), any(),
+					eq(Collections.emptySet()), eq(TransactionType.UNCONSTRAINED), any(), any(), eq("IMPLICIT"), any());
 		then(boltConnection).should().rollback();
+		then(boltConnection).should().flush(any());
 		then(boltConnection).shouldHaveNoMoreInteractions();
 	}
 
 	private static BoltConnection mockBoltConnection() {
 		var boltConnection = mock(BoltConnection.class);
-		given(boltConnection.beginTransaction(anySet(), anyMap(), any(AccessMode.class), any(TransactionType.class),
-				Mockito.anyBoolean()))
-			.willReturn(CompletableFuture.completedFuture(null));
+		given(boltConnection.beginTransaction(eq(DatabaseNameUtil.database("aBeautifulDatabase")), eq(AccessMode.WRITE),
+				any(), eq(Collections.emptySet()), any(TransactionType.class), any(), any(), any(), any()))
+			.willReturn(CompletableFuture.completedStage(boltConnection));
 		return boltConnection;
 	}
 
@@ -213,8 +252,16 @@ class DefaultTransactionImplTests {
 	@ValueSource(booleans = { true, false })
 	void shouldFail(boolean autoCommit) throws SQLException {
 		var boltConnection = mockBoltConnection();
-		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER,
-				CompletableFuture.completedStage(null), autoCommit, null, Neo4jTransaction.State.READY);
+		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER, false, autoCommit,
+				AccessMode.WRITE, Neo4jTransaction.State.READY, "aBeautifulDatabase");
+		var connectionFuture = CompletableFuture.completedFuture(boltConnection);
+		given(boltConnection.rollback()).willReturn(connectionFuture);
+		given(boltConnection.flush(any())).willAnswer((Answer<CompletableFuture<Void>>) invocation -> {
+			invocation.<ResponseHandler>getArgument(0).onRollbackSummary(mock(RollbackSummary.class));
+			invocation.<ResponseHandler>getArgument(0).onComplete();
+			return CompletableFuture.completedFuture(null);
+		});
+
 		var exception = mock(SQLException.class);
 
 		this.transaction.fail(exception);
@@ -223,25 +270,29 @@ class DefaultTransactionImplTests {
 			.isEqualTo(autoCommit ? Neo4jTransaction.State.FAILED : Neo4jTransaction.State.OPEN_FAILED);
 		assertThat(this.transaction.isRunnable()).isEqualTo(false);
 		assertThat(this.transaction.isOpen()).isEqualTo(!autoCommit);
+
+		var transactionType = autoCommit ? TransactionType.UNCONSTRAINED : TransactionType.DEFAULT;
+		var transactionMode = autoCommit ? "IMPLICIT" : null;
 		then(boltConnection).should()
-			.beginTransaction(Set.of(), Map.of(), AccessMode.WRITE,
-					autoCommit ? TransactionType.UNCONSTRAINED : TransactionType.DEFAULT, false);
+			.beginTransaction(eq(DatabaseNameUtil.database("aBeautifulDatabase")), eq(AccessMode.WRITE), any(),
+					eq(Collections.emptySet()), eq(transactionType), any(), any(), eq(transactionMode), any());
 		then(boltConnection).shouldHaveNoMoreInteractions();
 	}
 
 	@Test
 	void shouldRollbackToFailed() throws SQLException {
 		var boltConnection = mockBoltConnection();
-		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER,
-				CompletableFuture.completedStage(null), false, null, Neo4jTransaction.State.OPEN_FAILED);
-
+		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER, false, false,
+				AccessMode.WRITE, Neo4jTransaction.State.OPEN_FAILED, "aBeautifulDatabase");
 		this.transaction.rollback();
 
 		assertThat(this.transaction.getState()).isEqualTo(Neo4jTransaction.State.FAILED);
 		assertThat(this.transaction.isRunnable()).isEqualTo(false);
 		assertThat(this.transaction.isOpen()).isEqualTo(false);
+
 		then(boltConnection).should()
-			.beginTransaction(Set.of(), Map.of(), AccessMode.WRITE, TransactionType.DEFAULT, false);
+			.beginTransaction(eq(DatabaseNameUtil.database("aBeautifulDatabase")), eq(AccessMode.WRITE), any(),
+					eq(Collections.emptySet()), eq(TransactionType.DEFAULT), any(), any(), eq(null), any());
 		then(boltConnection).shouldHaveNoMoreInteractions();
 	}
 
@@ -249,35 +300,45 @@ class DefaultTransactionImplTests {
 	@MethodSource("getShouldThrowInInvalidStateArgs")
 	void shouldThrowInInvalidState(boolean autocommit, Neo4jTransaction.State state, TransactionMethodRunner runner) {
 		var boltConnection = mockBoltConnection();
-		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER,
-				CompletableFuture.completedStage(null), autocommit, null, state);
+		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER, false, autocommit,
+				AccessMode.WRITE, state, "aBeautifulDatabase");
 
 		assertThatThrownBy(() -> runner.run(this.transaction)).isExactlyInstanceOf(SQLException.class);
 		assertThat(this.transaction.getState()).isEqualTo(state);
+		var transactionType = autocommit ? TransactionType.UNCONSTRAINED : TransactionType.DEFAULT;
+		var transactionMode = autocommit ? "IMPLICIT" : null;
 		then(boltConnection).should()
-			.beginTransaction(Set.of(), Map.of(), AccessMode.WRITE,
-					autocommit ? TransactionType.UNCONSTRAINED : TransactionType.DEFAULT, false);
+			.beginTransaction(eq(DatabaseNameUtil.database("aBeautifulDatabase")), eq(AccessMode.WRITE), any(),
+					eq(Collections.emptySet()), eq(transactionType), any(), any(), eq(transactionMode), any());
 		then(boltConnection).shouldHaveNoMoreInteractions();
 	}
 
 	static Stream<Arguments> getShouldThrowInInvalidStateArgs() {
 		return Stream.of(
 				Arguments.of(true, Neo4jTransaction.State.NEW,
-						(TransactionMethodRunner) transaction -> transaction.pull(mock(RunResponse.class), -1)),
+						(TransactionMethodRunner) transaction -> transaction
+							.pull(mock(Neo4jTransaction.RunResponse.class), -1)),
 				Arguments.of(false, Neo4jTransaction.State.NEW,
-						(TransactionMethodRunner) transaction -> transaction.pull(mock(RunResponse.class), -1)),
+						(TransactionMethodRunner) transaction -> transaction
+							.pull(mock(Neo4jTransaction.RunResponse.class), -1)),
 				Arguments.of(true, Neo4jTransaction.State.FAILED,
-						(TransactionMethodRunner) transaction -> transaction.pull(mock(RunResponse.class), -1)),
+						(TransactionMethodRunner) transaction -> transaction
+							.pull(mock(Neo4jTransaction.RunResponse.class), -1)),
 				Arguments.of(false, Neo4jTransaction.State.FAILED,
-						(TransactionMethodRunner) transaction -> transaction.pull(mock(RunResponse.class), -1)),
+						(TransactionMethodRunner) transaction -> transaction
+							.pull(mock(Neo4jTransaction.RunResponse.class), -1)),
 				Arguments.of(true, Neo4jTransaction.State.COMMITTED,
-						(TransactionMethodRunner) transaction -> transaction.pull(mock(RunResponse.class), -1)),
+						(TransactionMethodRunner) transaction -> transaction
+							.pull(mock(Neo4jTransaction.RunResponse.class), -1)),
 				Arguments.of(false, Neo4jTransaction.State.COMMITTED,
-						(TransactionMethodRunner) transaction -> transaction.pull(mock(RunResponse.class), -1)),
+						(TransactionMethodRunner) transaction -> transaction
+							.pull(mock(Neo4jTransaction.RunResponse.class), -1)),
 				Arguments.of(true, Neo4jTransaction.State.ROLLEDBACK,
-						(TransactionMethodRunner) transaction -> transaction.pull(mock(RunResponse.class), -1)),
+						(TransactionMethodRunner) transaction -> transaction
+							.pull(mock(Neo4jTransaction.RunResponse.class), -1)),
 				Arguments.of(false, Neo4jTransaction.State.ROLLEDBACK,
-						(TransactionMethodRunner) transaction -> transaction.pull(mock(RunResponse.class), -1)),
+						(TransactionMethodRunner) transaction -> transaction
+							.pull(mock(Neo4jTransaction.RunResponse.class), -1)),
 				Arguments.of(true, Neo4jTransaction.State.FAILED,
 						(TransactionMethodRunner) transaction -> transaction.runAndPull("query", Collections.emptyMap(),
 								-1, 0)),
@@ -358,8 +419,9 @@ class DefaultTransactionImplTests {
 	@ParameterizedTest
 	@EnumSource(Neo4jTransaction.State.class)
 	void shouldDetermineIsRunnable(Neo4jTransaction.State state) {
-		this.transaction = new DefaultTransactionImpl(mockBoltConnection(), null, null, NOOP_HANDLER,
-				CompletableFuture.completedStage(null), true, null, state);
+		this.transaction = new DefaultTransactionImpl(mockBoltConnection(), null, null, NOOP_HANDLER, false, true,
+				AccessMode.WRITE, state, "aBeautifulDatabase");
+
 		var runnable = switch (state) {
 			case NEW, READY -> true;
 			case OPEN_FAILED, FAILED, COMMITTED, ROLLEDBACK -> false;
@@ -371,8 +433,8 @@ class DefaultTransactionImplTests {
 	@ParameterizedTest
 	@EnumSource(Neo4jTransaction.State.class)
 	void shouldDetermineIsOpen(Neo4jTransaction.State state) {
-		this.transaction = new DefaultTransactionImpl(mockBoltConnection(), null, null, NOOP_HANDLER,
-				CompletableFuture.completedStage(null), true, null, state);
+		this.transaction = new DefaultTransactionImpl(mockBoltConnection(), null, null, NOOP_HANDLER, false, true,
+				AccessMode.WRITE, state, "aBeautifulDatabase");
 		var open = switch (state) {
 			case NEW, READY, OPEN_FAILED -> true;
 			case FAILED, COMMITTED, ROLLEDBACK -> false;
@@ -384,19 +446,28 @@ class DefaultTransactionImplTests {
 	@ParameterizedTest
 	@ValueSource(booleans = { true, false })
 	void shouldFailOnRunAndPullTimeout(boolean autoCommit) {
-		var boltConnection = mock(BoltConnection.class);
+		var boltConnection = mockBoltConnection();
 		var fatalExceptionHandler = mock(DefaultTransactionImpl.FatalExceptionHandler.class);
-		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, fatalExceptionHandler,
-				new CompletableFuture<>(), autoCommit, null, null);
+		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, fatalExceptionHandler, false,
+				autoCommit, AccessMode.WRITE, null, "aBeautifulDatabase");
+		var connectionFuture = CompletableFuture.completedFuture(boltConnection);
+
 		var query = "query";
 		var parameters = Collections.<String, Object>emptyMap();
 		var fetchSize = 5;
-		var runResponse = mock(RunResponse.class);
-		var runFuture = CompletableFuture.completedFuture(runResponse);
-		given(boltConnection.run(query, parameters, false)).willReturn(runFuture);
-		var pullResponse = mock(PullResponse.class);
-		given(boltConnection.pull(runFuture, fetchSize)).willReturn(CompletableFuture.completedFuture(pullResponse));
+		given(boltConnection.run(query, Collections.emptyMap())).willReturn(connectionFuture);
+		given(boltConnection.pull(-1L, fetchSize)).willReturn(connectionFuture);
+		given(boltConnection.flush(any())).willAnswer((Answer<CompletableFuture<Void>>) invocation -> {
+			invocation.<ResponseHandler>getArgument(0).onRunSummary(mock(RunSummary.class));
+			invocation.<ResponseHandler>getArgument(0).onPullSummary(mock(PullSummary.class));
+			return CompletableFuture.completedFuture(null);
+		});
 
+		var transactionType = autoCommit ? TransactionType.UNCONSTRAINED : TransactionType.DEFAULT;
+		var transactionMode = autoCommit ? "IMPLICIT" : null;
+		then(boltConnection).should()
+			.beginTransaction(eq(DatabaseNameUtil.database("aBeautifulDatabase")), eq(AccessMode.WRITE), any(),
+					eq(Collections.emptySet()), eq(transactionType), any(), any(), eq(transactionMode), any());
 		assertThatThrownBy(() -> this.transaction.runAndPull(query, parameters, fetchSize, 1))
 			.isExactlyInstanceOf(SQLTimeoutException.class);
 		assertThat(this.transaction.getState())
@@ -409,17 +480,21 @@ class DefaultTransactionImplTests {
 	@ParameterizedTest
 	@ValueSource(booleans = { true, false })
 	void shouldFailOnRunAndDiscardTimeout(boolean autoCommit) {
-		var boltConnection = mock(BoltConnection.class);
+		var boltConnection = mockBoltConnection();
 		var fatalExceptionHandler = mock(DefaultTransactionImpl.FatalExceptionHandler.class);
-		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, fatalExceptionHandler,
-				new CompletableFuture<>(), autoCommit, null, null);
+		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, fatalExceptionHandler, false,
+				autoCommit, AccessMode.WRITE, null, "aBeautifulDatabase");
+		var connectionFuture = CompletableFuture.completedFuture(boltConnection);
+
 		var query = "query";
 		var parameters = Collections.<String, Object>emptyMap();
-		var runResponse = mock(RunResponse.class);
-		var runFuture = CompletableFuture.completedFuture(runResponse);
-		given(boltConnection.run(query, parameters, false)).willReturn(runFuture);
-		var discardResponse = mock(DiscardResponse.class);
-		given(boltConnection.discard(-1, true)).willReturn(CompletableFuture.completedFuture(discardResponse));
+		given(boltConnection.run(query, Collections.emptyMap())).willReturn(connectionFuture);
+		given(boltConnection.discard(eq(-1L), anyLong())).willReturn(connectionFuture);
+		given(boltConnection.flush(any())).willAnswer((Answer<CompletableFuture<Void>>) invocation -> {
+			invocation.<ResponseHandler>getArgument(0).onRunSummary(mock(RunSummary.class));
+			invocation.<ResponseHandler>getArgument(0).onDiscardSummary(mock(DiscardSummary.class));
+			return CompletableFuture.completedFuture(null);
+		});
 
 		assertThatThrownBy(() -> this.transaction.runAndDiscard(query, parameters, 1, false))
 			.isExactlyInstanceOf(SQLTimeoutException.class);
@@ -434,21 +509,21 @@ class DefaultTransactionImplTests {
 	@MethodSource("getNetworkTransactionMethodRunners")
 	@SuppressWarnings("unchecked")
 	void shouldNotifyExceptionHandlerOnFatalException(TransactionMethodRunner runner) {
-		var boltConnection = mock(BoltConnection.class);
+		var boltConnection = mockBoltConnection();
 		var fatalExceptionHandler = mock(DefaultTransactionImpl.FatalExceptionHandler.class);
+		var connectionFuture = CompletableFuture.completedFuture(boltConnection);
 		var exception = new BoltException("Defunct connection");
-		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, fatalExceptionHandler,
-				CompletableFuture.failedFuture(exception), true, null, null);
-		given(boltConnection.run(any(), any(), anyBoolean()))
-			.willReturn(CompletableFuture.completedFuture(mock(RunResponse.class)));
-		given(boltConnection.pull(any(CompletableFuture.class), anyLong()))
-			.willReturn(CompletableFuture.completedFuture(mock(PullResponse.class)));
-		given(boltConnection.discard(anyLong(), anyBoolean()))
-			.willReturn(CompletableFuture.completedFuture(mock(DiscardResponse.class)));
-		given(boltConnection.discard(any(), anyLong(), anyBoolean()))
-			.willReturn(CompletableFuture.completedFuture(mock(DiscardResponse.class)));
-		given(boltConnection.commit()).willReturn(CompletableFuture.completedFuture(null));
-		given(boltConnection.rollback()).willReturn(CompletableFuture.completedFuture(null));
+
+		given(boltConnection.reset()).willReturn(CompletableFuture.failedFuture(exception));
+		given(boltConnection.run(any(), any())).willReturn(connectionFuture);
+		given(boltConnection.pull(anyLong(), anyLong())).willReturn(connectionFuture);
+		given(boltConnection.discard(anyLong(), anyLong())).willReturn(connectionFuture);
+		given(boltConnection.discard(anyLong(), anyLong())).willReturn(connectionFuture);
+		given(boltConnection.commit()).willReturn(connectionFuture);
+		given(boltConnection.rollback()).willReturn(connectionFuture);
+
+		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, fatalExceptionHandler, true, true,
+				AccessMode.WRITE, null, "aBeautifulDatabase");
 
 		assertThatThrownBy(() -> runner.run(this.transaction)).isExactlyInstanceOf(SQLException.class);
 		assertThat(this.transaction.getState()).isEqualTo(Neo4jTransaction.State.FAILED);
@@ -457,62 +532,41 @@ class DefaultTransactionImplTests {
 		then(fatalExceptionHandler).should().handle(any(SQLException.class), any(SQLException.class));
 	}
 
-	@ParameterizedTest
-	@MethodSource("getNetworkTransactionMethodRunners")
-	@SuppressWarnings("unchecked")
-	void shouldThrowOnNeo4jException(TransactionMethodRunner runner) {
-		var boltConnection = mock(BoltConnection.class);
-		var fatalExceptionHandler = mock(DefaultTransactionImpl.FatalExceptionHandler.class);
-		var exception = new Neo4jException("code", "message");
-		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, fatalExceptionHandler,
-				CompletableFuture.failedFuture(exception), true, null, null);
-		given(boltConnection.run(any(), any(), anyBoolean()))
-			.willReturn(CompletableFuture.completedFuture(mock(RunResponse.class)));
-		given(boltConnection.pull(any(CompletableFuture.class), anyLong()))
-			.willReturn(CompletableFuture.completedFuture(mock(PullResponse.class)));
-		given(boltConnection.discard(anyLong(), anyBoolean()))
-			.willReturn(CompletableFuture.completedFuture(mock(DiscardResponse.class)));
-		given(boltConnection.discard(any(), anyLong(), anyBoolean()))
-			.willReturn(CompletableFuture.completedFuture(mock(DiscardResponse.class)));
-		given(boltConnection.commit()).willReturn(CompletableFuture.completedFuture(null));
-		given(boltConnection.rollback()).willReturn(CompletableFuture.completedFuture(null));
-
-		assertThatThrownBy(() -> runner.run(this.transaction)).isExactlyInstanceOf(SQLException.class);
-		assertThat(this.transaction.getState()).isEqualTo(Neo4jTransaction.State.FAILED);
-		assertThat(this.transaction.isRunnable()).isFalse();
-		assertThat(this.transaction.isOpen()).isEqualTo(false);
-		then(fatalExceptionHandler).shouldHaveNoMoreInteractions();
-	}
-
 	@SuppressWarnings("unchecked")
 	@ParameterizedTest
 	@ValueSource(booleans = { true, false })
 	void shouldDiscardOpenCursorsOnClose(boolean commit) throws SQLException {
 		var boltConnection = mockBoltConnection();
-		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER,
-				CompletableFuture.completedStage(null), false, null, null);
+		this.transaction = new DefaultTransactionImpl(boltConnection, null, null, NOOP_HANDLER, false, false,
+				AccessMode.WRITE, Neo4jTransaction.State.READY, "aBeautifulDatabase");
+		var connectionFuture = CompletableFuture.completedFuture(boltConnection);
+
 		var query = "query";
 		var parameters = Collections.<String, Object>emptyMap();
-		var runResponse0 = mock(RunResponse.class);
-		var runResponse1 = mock(RunResponse.class);
-		given(boltConnection.run(query, parameters, false)).willReturn(CompletableFuture.completedFuture(runResponse0))
-			.willReturn(CompletableFuture.completedFuture(runResponse1));
-		var pullResponse0 = mock(PullResponse.class);
-		var pullResponse1 = mock(PullResponse.class);
-		given(pullResponse1.hasMore()).willReturn(true);
-		given(boltConnection.pull(any(CompletionStage.class), anyLong()))
-			.willReturn(CompletableFuture.completedFuture(pullResponse0))
-			.willReturn(CompletableFuture.completedFuture(pullResponse1));
-		given(boltConnection.discard(runResponse1, -1, false))
-			.willReturn(CompletableFuture.completedFuture(mock(DiscardResponse.class)));
+		given(boltConnection.run(query, Collections.emptyMap())).willReturn(connectionFuture);
+
+		given(boltConnection.pull(eq(-1L), anyLong())).willReturn(connectionFuture);
+		given(boltConnection.discard(anyLong(), anyLong())).willReturn(connectionFuture);
+		var counter = new AtomicInteger();
+		given(boltConnection.flush(any())).willAnswer((Answer<CompletableFuture<Void>>) invocation -> {
+			invocation.<ResponseHandler>getArgument(0).onRunSummary(mock(RunSummary.class));
+			var pullSummary = mock(PullSummary.class);
+			given(pullSummary.hasMore()).willReturn(counter.compareAndSet(0, 1));
+			invocation.<ResponseHandler>getArgument(0).onPullSummary(pullSummary);
+			invocation.<ResponseHandler>getArgument(0).onDiscardSummary(mock(DiscardSummary.class));
+			invocation.<ResponseHandler>getArgument(0).onComplete();
+			return CompletableFuture.completedFuture(null);
+		});
+
 		if (commit) {
-			given(boltConnection.commit()).willReturn(CompletableFuture.completedFuture(null));
+			given(boltConnection.commit()).willReturn(connectionFuture);
 		}
 		else {
-			given(boltConnection.rollback()).willReturn(CompletableFuture.completedFuture(null));
+			given(boltConnection.rollback()).willReturn(connectionFuture);
 		}
-		var responses0 = this.transaction.runAndPull(query, parameters, 1, 0);
-		var responses1 = this.transaction.runAndPull(query, parameters, 1, 0);
+
+		this.transaction.runAndPull(query, parameters, 1, 0);
+		this.transaction.runAndPull(query, parameters, 1, 0);
 
 		if (commit) {
 			this.transaction.commit();
@@ -521,10 +575,13 @@ class DefaultTransactionImplTests {
 			this.transaction.rollback();
 		}
 
-		then(boltConnection).should().beginTransaction(anySet(), anyMap(), any(), any(), anyBoolean());
-		then(boltConnection).should(times(2)).run(query, parameters, false);
-		then(boltConnection).should(times(2)).pull(any(CompletionStage.class), anyLong());
-		then(boltConnection).should().discard(runResponse1, -1, false);
+		then(boltConnection).should()
+			.beginTransaction(eq(DatabaseNameUtil.database("aBeautifulDatabase")), eq(AccessMode.WRITE), any(),
+					eq(Collections.emptySet()), eq(TransactionType.DEFAULT), any(), any(), any(), any());
+		then(boltConnection).should(times(2)).run(query, Collections.emptyMap());
+		then(boltConnection).should(times(2)).pull(anyLong(), anyLong());
+		then(boltConnection).should().discard(anyLong(), anyLong());
+		then(boltConnection).should(times(3)).flush(any());
 		if (commit) {
 			then(boltConnection).should().commit();
 		}
